correction alignement icons

--- a/Style/style.scss
+++ b/Style/style.scss
@@ -57,7 +57,6 @@ h1 {
   @include column;
   &_text {
     width: 80%;
-    text-align: center;
   }
   &__bouton {
     @include bouton;
@@ -111,12 +110,12 @@ h1 {
     z-index: 1;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
   }
   &__text {
     width: 80%;
     padding-left: 5%;
+    text-align: start;
   }
 }
 
@@ -197,12 +196,13 @@ h1 {
   height: auto;
   font-size: 25px;
   padding-right: 5%;
-  height: auto;
   float: right;
   display: flex;
   align-items: center;
-  &:hover {
-    background: linear-gradient($primaire, $secondaire);
+  &:active {
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: blue;
   }
 }
 
